--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -218,7 +218,12 @@
    "source": [
     "for i, algorithm in enumerate(algorithms_to_run):\n",
     "    algorithm_name = convert_to_normal(algorithm.name)\n",
-    "    print_log(f\"Running '{algorithm_name}' ({i+1}/{len(algorithms_to_run)})\")\n"
+    "    print_log(f\"Running '{algorithm_name}' ({i+1}/{len(algorithms_to_run)})\")\n",
+    "\n",
+    "    if algorithm.options[\"direction\"] == \"directed\":\n",
+    "        centrality = algorithm.func(di_graph, **algorithm.args)\n",
+    "    else:\n",
+    "        centrality = algorithm.func(graph_fly, **algorithm.args)\n"
    ]
   },
   {
