--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "4a197da6",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "27"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -164,14 +164,14 @@
        "21"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "graph_fly = nx.read_edgelist(join(data_dir, \"DM-HT_small.txt\"), nodetype=str, data=((\"weight\", float),))\n",
-    "di_graph = undirected_to_directed(graph_fly)\n",
+    "graph = nx.read_edgelist(join(data_dir, \"DM-HT_small.txt\"), nodetype=str, data=((\"weight\", float),))\n",
+    "di_graph = undirected_to_directed(graph)\n",
     "di_graph.number_of_nodes()\n",
     "di_graph.number_of_edges()"
    ]
@@ -223,7 +223,7 @@
     "    if algorithm.options[\"direction\"] == \"directed\":\n",
     "        centrality = algorithm.func(di_graph, **algorithm.args)\n",
     "    else:\n",
-    "        centrality = algorithm.func(graph_fly, **algorithm.args)\n"
+    "        centrality = algorithm.func(graph, **algorithm.args)\n"
    ]
   },
   {
