--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "8349750b",
    "metadata": {},
    "outputs": [
@@ -203,15 +203,25 @@
      "output_type": "stream",
      "text": [
       "[ log ]: Running 'Degree Centrality' (1/10)\n",
+      "[ log ]: Option: '{'direction': 'both'}'\n",
       "[ log ]: Running 'In Degree Centrality' (2/10)\n",
+      "[ log ]: Option: '{'direction': 'directed'}'\n",
       "[ log ]: Running 'Out Degree Centrality' (3/10)\n",
+      "[ log ]: Option: '{'direction': 'directed'}'\n",
       "[ log ]: Running 'Eigenvector Centrality' (4/10)\n",
+      "[ log ]: Option: '{'direction': 'both'}'\n",
       "[ log ]: Running 'Katz Centrality' (5/10)\n",
+      "[ log ]: Option: '{'direction': 'both'}'\n",
       "[ log ]: Running 'Pagerank' (6/10)\n",
+      "[ log ]: Option: '{'direction': 'both'}'\n",
       "[ log ]: Running 'Voterank' (7/10)\n",
+      "[ log ]: Option: '{'direction': 'both'}'\n",
       "[ log ]: Running 'Closeness Centrality' (8/10)\n",
+      "[ log ]: Option: '{'direction': 'both'}'\n",
       "[ log ]: Running 'Harmonic Centrality' (9/10)\n",
-      "[ log ]: Running 'Betweenness Centrality' (10/10)\n"
+      "[ log ]: Option: '{'direction': 'both'}'\n",
+      "[ log ]: Running 'Betweenness Centrality' (10/10)\n",
+      "[ log ]: Option: '{'direction': 'both'}'\n"
      ]
     }
    ],
@@ -220,6 +230,8 @@
     "    algorithm_name = convert_to_normal(algorithm.name)\n",
     "    print_log(f\"Running '{algorithm_name}' ({i+1}/{len(algorithms_to_run)})\")\n",
     "    print_log(f\"Option: '{algorithm.options}'\")\n",
+    "\n",
+    "    print_log(f\"===============================\")\n",
     "\n",
     "\n",
     "    # if algorithm.options[\"direction\"] == \"directed\":\n",
