--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "8349750b",
    "metadata": {},
    "outputs": [
@@ -204,24 +204,34 @@
      "text": [
       "[ log ]: Running 'Degree Centrality' (1/10)\n",
       "[ log ]: Option: '{'direction': 'both'}'\n",
+      "[ log ]: ===============================\n",
       "[ log ]: Running 'In Degree Centrality' (2/10)\n",
       "[ log ]: Option: '{'direction': 'directed'}'\n",
+      "[ log ]: ===============================\n",
       "[ log ]: Running 'Out Degree Centrality' (3/10)\n",
       "[ log ]: Option: '{'direction': 'directed'}'\n",
+      "[ log ]: ===============================\n",
       "[ log ]: Running 'Eigenvector Centrality' (4/10)\n",
       "[ log ]: Option: '{'direction': 'both'}'\n",
+      "[ log ]: ===============================\n",
       "[ log ]: Running 'Katz Centrality' (5/10)\n",
       "[ log ]: Option: '{'direction': 'both'}'\n",
+      "[ log ]: ===============================\n",
       "[ log ]: Running 'Pagerank' (6/10)\n",
       "[ log ]: Option: '{'direction': 'both'}'\n",
+      "[ log ]: ===============================\n",
       "[ log ]: Running 'Voterank' (7/10)\n",
       "[ log ]: Option: '{'direction': 'both'}'\n",
+      "[ log ]: ===============================\n",
       "[ log ]: Running 'Closeness Centrality' (8/10)\n",
       "[ log ]: Option: '{'direction': 'both'}'\n",
+      "[ log ]: ===============================\n",
       "[ log ]: Running 'Harmonic Centrality' (9/10)\n",
       "[ log ]: Option: '{'direction': 'both'}'\n",
+      "[ log ]: ===============================\n",
       "[ log ]: Running 'Betweenness Centrality' (10/10)\n",
-      "[ log ]: Option: '{'direction': 'both'}'\n"
+      "[ log ]: Option: '{'direction': 'both'}'\n",
+      "[ log ]: ===============================\n"
      ]
     }
    ],
