--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -241,6 +241,14 @@
     "    print_log(f\"Running '{algorithm_name}' ({i+1}/{len(algorithms_to_run)})\")\n",
     "    print_log(f\"Option: '{algorithm.options}'\")\n",
     "\n",
+    "    if algorithm.options[\"direction\"] == \"both\":\n",
+    "        centrality = algorithm.func(di_graph, **algorithm.args)\n",
+    "    elif algorithm.options[\"direction\"] == \"directed\":\n",
+    "        centrality = algorithm.func(di_graph, **algorithm.args)\n",
+    "    else:\n",
+    "        print_error(f\"Invalid direction: '{algorithm.options['direction']}'\")\n",
+    "        continue\n",
+    "\n",
     "    if algorithm.options[\"direction\"] == \"directed\":\n",
     "        centrality = algorithm.func(di_graph, **algorithm.args)\n",
     "    else:\n",
