Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -190,7 +190,15 @@
    "id": "0901df79",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class MyStrEnum(str, Enum):\n",
+    "\n",
+    "    OK     = 'OK'\n",
+    "    FAILED = 'FAILED'\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        return self.value"
+   ]
   },
   {
    "cell_type": "code",
