--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -186,18 +186,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "0901df79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyStrEnum(str, Enum):\n",
-    "\n",
-    "    OK     = 'OK'\n",
-    "    FAILED = 'FAILED'\n",
-    "\n",
+    "from enum import Enum\n",
+    "class StrEnum(str, Enum):\n",
+    "    BOTH = \"both\"\n",
+    "    DIRECTED = \"directed\"\n",
     "    def __str__(self) -> str:\n",
     "        return self.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "37c52651",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'failed'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(StrEnum.FAILED)"
    ]
   },
   {
