--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "id": "8477c89f-d8b1-48a2-a44e-ad2a4b41ae6e",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
     "import logging as log\n",
-    "\n",
+    "from enum import Enum\n",
     "from os.path import join, exists, isfile, isdir, abspath, dirname, basename, realpath\n",
     "from os import makedirs, listdir, pardir, getcwd\n",
     "from dataclasses import dataclass, field\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "id": "39d0532c",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,13 @@
     "    name: str = field(default=\"\")\n",
     "    func: object = field(default=print)\n",
     "    args: dict = field(default_factory=dict)\n",
-    "    options: dict = field(default_factory=dict)"
+    "    options: dict = field(default_factory=dict)\n",
+    "\n",
+    "class GRAPH_TYPE(str, Enum):\n",
+    "    BOTH = \"both\"\n",
+    "    DIRECTED = \"directed\"\n",
+    "    def __str__(self) -> str:\n",
+    "        return self.value"
    ]
   },
   {
@@ -186,42 +192,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "0901df79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from enum import Enum\n",
-    "class StrEnum(str, Enum):\n",
-    "    BOTH = \"both\"\n",
-    "    DIRECTED = \"directed\"\n",
-    "    def __str__(self) -> str:\n",
-    "        return self.value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "37c52651",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'failed'"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str(StrEnum.FAILED)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 33,
    "id": "8349750b",
    "metadata": {},
@@ -269,7 +239,7 @@
     "    print_log(f\"Running '{algorithm_name}' ({i+1}/{len(algorithms_to_run)})\")\n",
     "    print_log(f\"Option: '{algorithm.options}'\")\n",
     "\n",
-    "    if algorithm.options[\"direction\"] != \"both\" and algorithm.options[\"direction\"] != \"directed\":\n",
+    "    if algorithm.options[\"direction\"] != str(GRAPH_TYPE.BOTH) and algorithm.options[\"direction\"] != str(GRAPH_TYPE.DIRECTED):\n",
     "        print_error(f\"Invalid direction: '{algorithm.options['direction']}'\")\n",
     "        continue\n",
     "\n",
