--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -236,11 +236,13 @@
    "source": [
     "for i, algorithm in enumerate(algorithms_to_run):\n",
     "    algorithm_name = convert_to_normal(algorithm.name)\n",
+    "    graph_direction = algorithm.options[\"direction\"]\n",
+    "\n",
     "    print_log(f\"Running '{algorithm_name}' ({i+1}/{len(algorithms_to_run)})\")\n",
     "    print_log(f\"Option: '{algorithm.options}'\")\n",
     "\n",
-    "    if algorithm.options[\"direction\"] != str(GRAPH_TYPE.BOTH) and algorithm.options[\"direction\"] != str(GRAPH_TYPE.DIRECTED):\n",
-    "        print_error(f\"Invalid direction: '{algorithm.options['direction']}'\")\n",
+    "    if graph_direction != str(GRAPH_TYPE.BOTH) and graph_direction != str(GRAPH_TYPE.DIRECTED):\n",
+    "        print_error(f\"Invalid direction: '{graph_direction}'\")\n",
     "        continue\n",
     "\n",
     "    if algorithm.options[\"direction\"] == \"both\":\n",
