--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -241,6 +241,7 @@
     "    print_log(f\"Running '{algorithm_name}' ({i+1}/{len(algorithms_to_run)})\")\n",
     "    print_log(f\"Option: '{algorithm.options}'\")\n",
     "\n",
+    "    # if graph is not directed or undirected, then skip -> invalid direction option\n",
     "    if graph_direction != str(GRAPH_TYPE.BOTH) and graph_direction != str(GRAPH_TYPE.DIRECTED):\n",
     "        print_error(f\"Invalid direction: '{graph_direction}'\")\n",
     "        continue\n",
