Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -246,22 +246,10 @@
     "        print_error(f\"Invalid direction: '{graph_direction}'\")\n",
     "        continue\n",
     "\n",
-    "    if algorithm.options[\"direction\"] == \"both\":\n",
-    "        centrality = algorithm.func(di_graph, **algorithm.args)\n",
-    "    elif algorithm.options[\"direction\"] == \"directed\":\n",
-    "        centrality = algorithm.func(di_graph, **algorithm.args)\n",
-    "    else:\n",
-    "        print_error(f\"Invalid direction: '{algorithm.options['direction']}'\")\n",
-    "        continue\n",
+    "    __graph = di_graph if graph_direction == str(GRAPH_TYPE.DIRECTED) else graph\n",
+    "    __centrality = algorithm.func(__graph, **algorithm.args)\n",
     "\n",
-    "    if algorithm.options[\"direction\"] == \"directed\":\n",
-    "        centrality = algorithm.func(di_graph, **algorithm.args)\n",
-    "    else:\n",
-    "        centrality = algorithm.func(graph, **algorithm.args)\n",
-    "\n",
-    "    print_log(f\"===============================\")\n",
-    "\n",
-    "\n"
+    "    print_log(f\"===============================\")"
    ]
   },
   {
