--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -249,6 +249,8 @@
     "    __graph = di_graph if graph_direction == str(GRAPH_TYPE.DIRECTED) else graph\n",
     "    __centrality = algorithm.func(__graph, **algorithm.args)\n",
     "\n",
+    "    print_log(f\"Result: '{__centrality}'\")\n",
+    "\n",
     "    print_log(f\"===============================\")"
    ]
   },
