--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "id": "8349750b",
    "metadata": {},
    "outputs": [
@@ -202,34 +202,57 @@
      "text": [
       "[ log ]: Running 'Degree Centrality' (1/10)\n",
       "[ log ]: Option: '{'direction': 'both'}'\n",
+      "[ log ]: Result: '{'4R79.2': 0.15384615384615385, 'F33A8.4': 0.038461538461538464, 'K08E4.1': 0.038461538461538464, 'Y37E3.9': 0.038461538461538464, 'Y59A8B.1': 0.038461538461538464, 'AC3.2': 0.038461538461538464, 'C55A6.10': 0.038461538461538464, 'AC3.7': 0.11538461538461539, 'C36B7.6': 0.07692307692307693, 'F55F8.5': 0.07692307692307693, 'R166.2': 0.07692307692307693, 'AC3.8': 0.11538461538461539, 'AC7.2': 0.038461538461538464, 'F59F5.6': 0.038461538461538464, 'B0024.11': 0.11538461538461539, 'K01G5.2': 0.038461538461538464, 'K08H2.6': 0.038461538461538464, 'Y74C9A.3': 0.038461538461538464, 'B0024.13': 0.038461538461538464, 'M142.1': 0.038461538461538464, 'B0024.14': 0.07692307692307693, 'D2021.2': 0.038461538461538464, 'T16H12.5': 0.038461538461538464, 'B0024.9': 0.11538461538461539, 'T27A10.3': 0.038461538461538464, 'T27E9.3': 0.038461538461538464, 'ZK370.2': 0.038461538461538464}'\n",
       "[ log ]: ===============================\n",
       "[ log ]: Running 'In Degree Centrality' (2/10)\n",
       "[ log ]: Option: '{'direction': 'directed'}'\n",
+      "[ log ]: Result: '{'4R79.2': 0.0, 'F33A8.4': 0.038461538461538464, 'K08E4.1': 0.038461538461538464, 'Y37E3.9': 0.038461538461538464, 'Y59A8B.1': 0.038461538461538464, 'AC3.2': 0.0, 'C55A6.10': 0.038461538461538464, 'AC3.7': 0.0, 'C36B7.6': 0.038461538461538464, 'F55F8.5': 0.038461538461538464, 'R166.2': 0.038461538461538464, 'AC3.8': 0.11538461538461539, 'AC7.2': 0.0, 'F59F5.6': 0.038461538461538464, 'B0024.11': 0.0, 'K01G5.2': 0.038461538461538464, 'K08H2.6': 0.038461538461538464, 'Y74C9A.3': 0.038461538461538464, 'B0024.13': 0.0, 'M142.1': 0.038461538461538464, 'B0024.14': 0.0, 'D2021.2': 0.038461538461538464, 'T16H12.5': 0.038461538461538464, 'B0024.9': 0.0, 'T27A10.3': 0.038461538461538464, 'T27E9.3': 0.038461538461538464, 'ZK370.2': 0.038461538461538464}'\n",
       "[ log ]: ===============================\n",
       "[ log ]: Running 'Out Degree Centrality' (3/10)\n",
       "[ log ]: Option: '{'direction': 'directed'}'\n",
+      "[ log ]: Result: '{'4R79.2': 0.15384615384615385, 'F33A8.4': 0.0, 'K08E4.1': 0.0, 'Y37E3.9': 0.0, 'Y59A8B.1': 0.0, 'AC3.2': 0.038461538461538464, 'C55A6.10': 0.0, 'AC3.7': 0.11538461538461539, 'C36B7.6': 0.038461538461538464, 'F55F8.5': 0.038461538461538464, 'R166.2': 0.038461538461538464, 'AC3.8': 0.0, 'AC7.2': 0.038461538461538464, 'F59F5.6': 0.0, 'B0024.11': 0.11538461538461539, 'K01G5.2': 0.0, 'K08H2.6': 0.0, 'Y74C9A.3': 0.0, 'B0024.13': 0.038461538461538464, 'M142.1': 0.0, 'B0024.14': 0.07692307692307693, 'D2021.2': 0.0, 'T16H12.5': 0.0, 'B0024.9': 0.11538461538461539, 'T27A10.3': 0.0, 'T27E9.3': 0.0, 'ZK370.2': 0.0}'\n",
       "[ log ]: ===============================\n",
       "[ log ]: Running 'Eigenvector Centrality' (4/10)\n",
       "[ log ]: Option: '{'direction': 'both'}'\n",
+      "[ log ]: Result: '{'4R79.2': 4.716760424216865e-11, 'F33A8.4': 2.4570284452835934e-11, 'K08E4.1': 2.055789062464112e-11, 'Y37E3.9': 2.4570284452835934e-11, 'Y59A8B.1': 2.4387666185461166e-11, 'AC3.2': 4.314080174115504e-23, 'C55A6.10': 4.314080174115504e-23, 'AC3.7': 0.4761211861284932, 'C36B7.6': 0.29523370235250657, 'F55F8.5': 0.45498942454905894, 'R166.2': 0.45367004623817914, 'AC3.8': 0.5227942136338736, 'AC7.2': 2.7989085771140505e-12, 'F59F5.6': 2.7989085771140505e-12, 'B0024.11': 4.884106924375576e-07, 'K01G5.2': 3.2863610491523796e-07, 'K08H2.6': 1.3276510931178646e-07, 'Y74C9A.3': 3.360307518956141e-07, 'B0024.13': 2.8229765023296736e-12, 'M142.1': 2.8229765023296736e-12, 'B0024.14': 1.6698910720749018e-07, 'D2021.2': 1.1870607657283095e-07, 'T16H12.5': 1.1744882042136131e-07, 'B0024.9': 4.851820088122802e-16, 'T27A10.3': 3.1960659806029802e-16, 'T27E9.3': 2.5805035181148507e-16, 'ZK370.2': 2.581922153772196e-16}'\n",
       "[ log ]: ===============================\n",
       "[ log ]: Running 'Katz Centrality' (5/10)\n",
       "[ log ]: Option: '{'direction': 'both'}'\n",
+      "[ log ]: Result: '{'4R79.2': 0.1566063931335056, 'F33A8.4': 0.10620395152598772, 'K08E4.1': 0.10095225464847349, 'Y37E3.9': 0.10620395152598772, 'Y59A8B.1': 0.10596492818341105, 'AC3.2': 0.08663382715913924, 'C55A6.10': 0.08663382715913924, 'AC3.7': 0.387136960285471, 'C36B7.6': 0.2648292889613608, 'F55F8.5': 0.36847555024413625, 'R166.2': 0.36761763162839295, 'AC3.8': 0.420558043984958, 'AC7.2': 0.11650833345849639, 'F59F5.6': 0.11650833345849639, 'B0024.11': 0.19139316122090544, 'K01G5.2': 0.14210534960922616, 'K08H2.6': 0.10154038408029577, 'Y74C9A.3': 0.1436367841073938, 'B0024.13': 0.11652703247900822, 'M142.1': 0.11652703247900822, 'B0024.14': 0.1733158549094898, 'D2021.2': 0.13722269833751913, 'T16H12.5': 0.13655355854396226, 'B0024.9': 0.11682099550733704, 'T27A10.3': 0.09474905266088154, 'T27E9.3': 0.09076138835427579, 'ZK370.2': 0.09077057839284963}'\n",
       "[ log ]: ===============================\n",
       "[ log ]: Running 'Pagerank' (6/10)\n",
       "[ log ]: Option: '{'direction': 'both'}'\n",
+      "[ log ]: Result: '{'4R79.2': 0.08808991365185675, 'F33A8.4': 0.025108407853699024, 'K08E4.1': 0.02191537425104489, 'Y37E3.9': 0.025108407853699024, 'Y59A8B.1': 0.02496308157488545, 'AC3.2': 0.037037037037037035, 'C55A6.10': 0.037037037037037035, 'AC3.7': 0.042773184209528414, 'C36B7.6': 0.02435304919768694, 'F55F8.5': 0.034914751559611455, 'R166.2': 0.03482568481553946, 'AC3.8': 0.048318515402818875, 'AC7.2': 0.037037037037037035, 'F59F5.6': 0.037037037037037035, 'B0024.11': 0.0710722881135835, 'K01G5.2': 0.030451274379102472, 'K08H2.6': 0.01561313225381945, 'Y74C9A.3': 0.03101145340164267, 'B0024.13': 0.037037037037037035, 'M142.1': 0.037037037037037035, 'B0024.14': 0.05405466257531029, 'D2021.2': 0.028650527592632997, 'T16H12.5': 0.028405920943167833, 'B0024.9': 0.07107228811358351, 'T27A10.3': 0.02865443222683738, 'T27E9.3': 0.024205587462436964, 'ZK370.2': 0.02421584034529025}'\n",
       "[ log ]: ===============================\n",
       "[ log ]: Running 'Voterank' (7/10)\n",
       "[ log ]: Option: '{'direction': 'both'}'\n",
+      "[ log ]: Result: '['4R79.2', 'AC3.7', 'B0024.11', 'B0024.9', 'B0024.14', 'AC3.8', 'AC3.2', 'AC7.2', 'B0024.13']'\n",
       "[ log ]: ===============================\n",
       "[ log ]: Running 'Closeness Centrality' (8/10)\n",
       "[ log ]: Option: '{'direction': 'both'}'\n",
+      "[ log ]: Result: '{'4R79.2': 0.07825902611099116, 'F33A8.4': 0.04388093641312342, 'K08E4.1': 0.04727207330140873, 'Y37E3.9': 0.04388093641312342, 'Y59A8B.1': 0.044024676368954345, 'AC3.2': 0.0264677875293819, 'C55A6.10': 0.0264677875293819, 'AC3.7': 0.045041634339924676, 'C36B7.6': 0.040003846737312033, 'F55F8.5': 0.03088555982687283, 'R166.2': 0.030951754319500226, 'AC3.8': 0.04125614525309543, 'AC7.2': 0.010552763985312684, 'F59F5.6': 0.010552763985312684, 'B0024.11': 0.040116307884974174, 'K01G5.2': 0.021990743409625788, 'K08H2.6': 0.03009516869871893, 'Y74C9A.3': 0.021769423903715026, 'B0024.13': 0.010549812006057471, 'M142.1': 0.010549812006057471, 'B0024.14': 0.02121460219769142, 'D2021.2': 0.014118014010978154, 'T16H12.5': 0.014168211333821843, 'B0024.9': 0.07468195677445616, 'T27A10.3': 0.04231878791289306, 'T27E9.3': 0.04617245999008459, 'ZK370.2': 0.04616277203405053}'\n",
       "[ log ]: ===============================\n",
       "[ log ]: Running 'Harmonic Centrality' (9/10)\n",
       "[ log ]: Option: '{'direction': 'both'}'\n",
+      "[ log ]: Result: '{'R166.2': 0.874995062724865, 'AC3.2': 0.6881624757639293, '4R79.2': 2.0465757523155546, 'T16H12.5': 0.4151608686144344, 'Y74C9A.3': 0.6111959403861045, 'C36B7.6': 1.2933718507315621, 'F55F8.5': 0.8726099539023844, 'K01G5.2': 0.6205435700108801, 'D2021.2': 0.41222425124202955, 'K08E4.1': 1.3784955081254748, 'Y59A8B.1': 1.2456165850000227, 'Y37E3.9': 1.239984584056009, 'T27A10.3': 1.1885157207729729, 'B0024.13': 0.27429511215749425, 'B0024.9': 1.9615043095073244, 'F33A8.4': 1.2399845840560093, 'F59F5.6': 0.27437186361812976, 'AC7.2': 0.27437186361812976, 'K08H2.6': 1.09351121130875, 'M142.1': 0.27429511215749425, 'AC3.7': 1.3454919984614921, 'ZK370.2': 1.3598641485582244, 'C55A6.10': 0.6881624757639293, 'B0024.11': 1.252314684975241, 'T27E9.3': 1.3603247665464124, 'B0024.14': 0.5515952912864754, 'AC3.8': 1.1013365460799505}'\n",
       "[ log ]: ===============================\n",
       "[ log ]: Running 'Betweenness Centrality' (10/10)\n",
-      "[ log ]: Option: '{'direction': 'both'}'\n",
-      "[ log ]: ===============================\n"
+      "[ log ]: Option: '{'direction': 'both'}'\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Sample larger than population or is negative",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [46], line 14\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[1;32m     13\u001b[0m __graph \u001b[38;5;241m=\u001b[39m di_graph \u001b[38;5;28;01mif\u001b[39;00m graph_direction \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mstr\u001b[39m(GRAPH_TYPE\u001b[38;5;241m.\u001b[39mDIRECTED) \u001b[38;5;28;01melse\u001b[39;00m graph\n\u001b[0;32m---> 14\u001b[0m __centrality \u001b[38;5;241m=\u001b[39m algorithm\u001b[38;5;241m.\u001b[39mfunc(__graph, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39malgorithm\u001b[38;5;241m.\u001b[39margs)\n\u001b[1;32m     16\u001b[0m print_log(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mResult: \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m__centrality\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     18\u001b[0m print_log(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m===============================\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/mgma/lib/python3.9/site-packages/networkx/utils/decorators.py:845\u001b[0m, in \u001b[0;36margmap.__call__.<locals>.func\u001b[0;34m(_argmap__wrapper, *args, **kwargs)\u001b[0m\n\u001b[1;32m    844\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfunc\u001b[39m(\u001b[39m*\u001b[39margs, __wrapper\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m--> 845\u001b[0m     \u001b[39mreturn\u001b[39;00m argmap\u001b[39m.\u001b[39;49m_lazy_compile(__wrapper)(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m<class 'networkx.utils.decorators.argmap'> compilation 29:4\u001b[0m, in \u001b[0;36margmap_betweenness_centrality_26\u001b[0;34m(G, k, normalized, weight, endpoints, seed)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcollections\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mgzip\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39minspect\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mitertools\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mre\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/mgma/lib/python3.9/site-packages/networkx/algorithms/centrality/betweenness.py:126\u001b[0m, in \u001b[0;36mbetweenness_centrality\u001b[0;34m(G, k, normalized, weight, endpoints, seed)\u001b[0m\n\u001b[1;32m    124\u001b[0m     nodes \u001b[39m=\u001b[39m G\n\u001b[1;32m    125\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 126\u001b[0m     nodes \u001b[39m=\u001b[39m seed\u001b[39m.\u001b[39;49msample(\u001b[39mlist\u001b[39;49m(G\u001b[39m.\u001b[39;49mnodes()), k)\n\u001b[1;32m    127\u001b[0m \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m nodes:\n\u001b[1;32m    128\u001b[0m     \u001b[39m# single source shortest paths\u001b[39;00m\n\u001b[1;32m    129\u001b[0m     \u001b[39mif\u001b[39;00m weight \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:  \u001b[39m# use BFS\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/mgma/lib/python3.9/random.py:449\u001b[0m, in \u001b[0;36mRandom.sample\u001b[0;34m(self, population, k, counts)\u001b[0m\n\u001b[1;32m    447\u001b[0m randbelow \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_randbelow\n\u001b[1;32m    448\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39m0\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m k \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m n:\n\u001b[0;32m--> 449\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mSample larger than population or is negative\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    450\u001b[0m result \u001b[39m=\u001b[39m [\u001b[39mNone\u001b[39;00m] \u001b[39m*\u001b[39m k\n\u001b[1;32m    451\u001b[0m setsize \u001b[39m=\u001b[39m \u001b[39m21\u001b[39m        \u001b[39m# size of a small set minus size of an empty list\u001b[39;00m\n",
+      "\u001b[0;31mValueError\u001b[0m: Sample larger than population or is negative"
      ]
     }
    ],
